--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "Negomir",
   "license": "MIT",
+  "scripts": {
+	  "start": "node ."
+  },
   "dependencies": {
     "discord.js": "^14.15.2",
     "got": "11.8.2"
